[package]
name = "nom-bufreader"
version = "0.1.0"
edition = "2018"
authors = [ "contact@geoffroycouprie.com" ]
description = "BufReader adapter for nom parsers"
license = "MIT"
keywords = ["parser", "parser-combinators", "parsing", "streaming", "async"]
categories = ["parsing"]

[dependencies]
nom = "6.2.1"
async-trait = { version = "0.1.51", optional = true }
futures = { version = "0.3.16", optional = true }
pin-project-lite = { version = "0.2.7", optional = true }

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
tokio = { version = "1.9.0", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["compat"] }

[features]
default = ["async"]
async = ["futures", "async-trait", "pin-project-lite"]
